Removed --illegal-access=warn